# DPLangevin

./: .gitignore  Doxyfile  INFO.md  Makefile  README.md  TODO.md  annotated.html  annotated_dup.js  application__dplangevin_8cpp.html  application__dplangevin_8cpp_source.html  application__dplangevin_8hpp.html  application__dplangevin_8hpp.js  application__dplangevin_8hpp_source.html  application__dpsim_8hpp.html  application__dpsim_8hpp.js  application__dpsim_8hpp_source.html  application__dpsim__private_8cpp.html  application__dpsim__private_8cpp_source.html  application__dpsim__public_8cpp.html  application__dpsim__public_8cpp_source.html  classBaseLangevin-members.html  classBaseLangevin.html  classBaseLangevin.js  classDPLangevin-members.html  classDPLangevin.html  classDPLangevin.js  classLangevin-members.html  classLangevin.html  classSimDP-members.html  classSimDP.html  classSimDP.js  class_base_langevin-members.html  class_base_langevin.html  class_base_langevin.js  class_d_p_langevin-members.html  class_d_p_langevin.html  class_sim_d_p-members.html  class_sim_d_p.html  class_sim_d_p.js  classes.html  (+101 more)
.github/workflows/: doxygen-gh-pages.yml  pypi-publish.yml  python-publish.yml  testpypi-publish.yml
docs/html/: annotated.html  annotated_dup.js  application__dplangevin_8cpp.html  application__dplangevin_8cpp_source.html  application__dplangevin_8hpp.html  application__dplangevin_8hpp.js  application__dplangevin_8hpp_source.html  application__dpsim_8hpp.html  application__dpsim_8hpp.js  application__dpsim_8hpp_source.html  application__dpsim__private_8cpp.html  application__dpsim__private_8cpp_source.html  application__dpsim__public_8cpp.html  application__dpsim__public_8cpp_source.html  class_base_langevin-members.html  class_base_langevin.html  class_base_langevin.js  class_d_p_langevin-members.html  class_d_p_langevin.html  class_d_p_langevin.js  class_langevin-members.html  class_langevin.html  class_langevin.js  class_sim_d_p-members.html  class_sim_d_p.html  class_sim_d_p.js  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  dplangevin_8cpp.html  dplangevin_8cpp_source.html  dplangevin_8hpp.html  dplangevin_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  general__coefficients_8hpp.html  general__coefficients_8hpp.js  (+81 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  defines_0.js  defines_1.js  enums_1.js  enums_2.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_1.js  pages_5.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_3.js  typedefs_4.js  typedefs_6.js  (+11 more)
html/: application__dplangevin_8hpp.html  application__dpsim_8hpp.js  class_d_p_langevin-members.html  class_d_p_langevin.html  class_langevin-members.html  class_langevin.html  general__core_8hpp.html  general__parameters_8hpp_source.html  hierarchy.html  langevin__base_8hpp.html  langevin__grid__2d_8cpp.html  md__i_n_f_o.html  namespaceinitialize.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js
html/search/: all_0.js  all_e.js  classes_2.js  functions_0.js  pages_0.js  pages_1.js  pages_3.js
images/html/: annotated_dup.js  class_sim_d_p.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  doxygen_crawl.html  files.html  general__core_8hpp_source.html  hierarchy.js  langevin__grid__1d_8cpp.html  langevin__utils_8cpp.html  md__r_e_a_d_m_e.html  md__t_o_d_o.html  struct_coefficients-members.html  struct_parameters.html
images/html/search/: all_c.js  files_2.js  pages_5.js  pages_b.js  searchdata.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  enums_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_1.js  pages_5.js  pages_7.js  pages_8.js  pages_9.js  (+15 more)
src/: README.md  __init__.py  application.hpp  application_dp.cpp  application_dp.hpp  application_dplangevin.cpp  application_dplangevin.hpp  application_dpsim.cpp  application_dpsim.hpp  application_dpsim_private.cpp  application_dpsim_public.cpp  application_pybind.cpp  applications.hpp  applications_pybind.cpp  base.hpp  bind.cpp  class.hpp  coefficients.hpp  core.hpp  cuts.txt  declarations.hpp  demo.cpp  dornic.hpp  dornic_class.hpp  dp.cpp  dp_application.cpp  dp_demo.cpp  dplangevin.cpp  dplangevin.hpp  enums.hpp  eulermethod.cpp  general_coefficients.hpp  general_core.hpp  general_enums.hpp  general_parameters.hpp  general_types.hpp  grid1d.cpp  grid2d.cpp  grid_1d.cpp  grid_2d.cpp  (+41 more)
test/: Demo.ipynb  README.md  TestDP.ipynb  TestDemo.ipynb  demo_mixed.py  demo_periodic.py  density_grid  initialize.py  meandensity_time  test_demo.py  test_dp.py  test_dp_mixedtopologies.py
